contact and projects page createrd

--- a/projects.html
+++ b/projects.html
@@ -56,8 +56,8 @@
                 <div class="project-card">
                     <div class="card h-100">
                         <div class="card-body text-center d-flex flex-column justify-content-between">
-                            <h5 class="card-title">Project Title 1</h5>
-                            <p class="card-text">A brief description of your project, mentioning the technologies used (e.g., HTML, CSS, JS). Describe what problem it solves and what you learned.</p>
+                            <h5 class="card-title">Cloud Kitchen</h5>
+                            <p class="card-text">I have developed a full-stack online ordering platform for a cloud kitchen, leveraging a responsive frontend built with HTML, CSS, Bootstrap, and  JavaScript. The backend is powered by PHP, which handles server-side logic and order processing. All user, menu, and order data are managed through a MySQL database, creating a complete and efficient digital solution with admin side.</p>
                             <a href="#" class="btn btn-primary" target="_blank">View Project</a>
                         </div>
                     </div>
@@ -66,8 +66,8 @@
                 <div class="project-card">
                     <div class="card h-100">
                         <div class="card-body text-center d-flex flex-column justify-content-between">
-                            <h5 class="card-title">Project Title 2</h5>
-                            <p class="card-text">Another project description. Highlight the features and your specific contributions to the project. Link to the live demo or code repository.</p>
+                            <h5 class="card-title">Resume Builder</h5>
+                            <p class="card-text">I have developed a full-stack resume builder with a responsive frontend built using HTML, CSS, and Bootstrap. The backend, powered by PHP, manages server-side logic, user authentication, and data processing. All user and resume data are securely stored in a MySQL database, creating a complete digital solution that  manages profressional resumes.</p>
                             <a href="#" class="btn btn-primary" target="_blank">View Project</a>
                         </div>
                     </div>
@@ -76,8 +76,8 @@
                 <div class="project-card">
                     <div class="card h-100">
                         <div class="card-body text-center d-flex flex-column justify-content-between">
-                            <h5 class="card-title">Project Title 3</h5>
-                            <p class="card-text">One more project to show your skills. You can mention a personal project, a group project from a hackathon, or an academic assignment.</p>
+                            <h5 class="card-title">Grocery Mart</h5>
+                            <p class="card-text">I have developed a full-stack online grocery platform. The responsive frontend, built with HTML, CSS, Bootstrap, and JavaScript, provides a seamless shopping experience for customers. On the backend, Java handles all server-side logic and order processing. The platform manages all user, product, and order information through a MySQL database.</p>
                             <a href="#" class="btn btn-primary" target="_blank">View Project</a>
                         </div>
                     </div>
