adding images and project links

--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
     <!-- About Section -->
     <header id="about" class="hero-section">
         <div class="container">
-            <img src="https://placehold.co/150x150/5a79a3/ffffff?text=Your+Photo" alt="Profile Picture" class="profile-img mb-4">
+            <img src="Shravani_Kudale.jpg" alt="Profile Picture" class="profile-img mb-4">
             <h1>Hi, I'm Shravani Kudale</h1>
             <p>As a recent BBA Computer Application graduate, I am passionate about building full-stack solutions that are not only technically robust but also strategically aligned with business objectives. With a solid foundation in Java, Spring Boot, and modern web technologies, I am eager to apply my problem-solving skills to develop efficient and impactful digital products.</p>
             <!-- Updated button to link to the new projects section on this page -->
@@ -69,7 +69,7 @@
                         <div class="card-body text-center d-flex flex-column justify-content-between">
                             <h5 class="card-title">Cloud Kitchen</h5>
                             <p class="card-text">I developed a cloud kitchen website designed to allow customers to easily order authentic, homemade food. The project was built with a full-stack approach, using HTML, CSS, and JavaScript for the responsive and intuitive frontend. On the backend, I used PHP to handle server-side logic, and a MySQL database to manage user data, food items,order information and admin side.</p>
-                            <a href="#" class="btn btn-primary" target="_blank">View Project</a>
+                            <a href="https://github.com/Shravanigi/Cloud_kitchen" class="btn btn-primary" target="_blank">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         <div class="card-body text-center d-flex flex-column justify-content-between">
                             <h5 class="card-title">Resume Builder</h5>
                             <p class="card-text">I developed a resume builder  website designed to allow users to easily build and manage their professional resume. The project was built with a full-stack approach, using HTML, CSS, and JavaScript for the responsive and intuitive frontend. On the backend, I used PHP to handle server-side logic, and a MySQL database to manage resume data.</p>
-                            <a href="#" class="btn btn-primary" target="_blank">View Project</a>
+                            <a href="https://github.com/Shravanigi/Resume_Builder" class="btn btn-primary" target="_blank">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                             <h5 class="card-title">Grocery Mart</h5>
                             <p class="card-text">I developed a full-stack e-commerce website for a grocery mart, 
                               website designed to allow users to easily order grocery online. The project was built with a full-stack approach, using HTML, CSS, and JavaScript for the responsive and intuitive frontend. On the backend, I used JAVA to handle server-side logic, and a MySQL database to manage user and product data. </p>
-                            <a href="#" class="btn btn-primary" target="_blank">View Project</a>
+                            <a href="https://github.com/shruti-21-patil/GroceryMart_project" class="btn btn-primary" target="_blank">View Project</a>
                         </div>
                     </div>
                 </div>
