--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
                         <div class="card-body text-center d-flex flex-column justify-content-between">
                             <h5 class="card-title">Cloud Kitchen</h5>
                             <p class="card-text">I have developed a full-stack online ordering platform for a cloud kitchen, leveraging a responsive frontend built with HTML, CSS, Bootstrap, and  JavaScript. The backend is powered by PHP, which handles server-side logic and order processing. All user, menu, and order data are managed through a MySQL database, creating a complete and efficient digital solution with admin side.</p>
-                            <a href="#" class="btn btn-primary" target="_blank">View Project</a>
+                            <a href="https://github.com/Shravanigi/Cloud_kitchen" class="btn btn-primary" target="_blank">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                         <div class="card-body text-center d-flex flex-column justify-content-between">
                             <h5 class="card-title">Resume Builder</h5>
                             <p class="card-text">I have developed a full-stack resume builder with a responsive frontend built using HTML, CSS, and Bootstrap. The backend, powered by PHP, manages server-side logic, user authentication, and data processing. All user and resume data are securely stored in a MySQL database, creating a complete digital solution that  manages profressional resumes.</p>
-                            <a href="#" class="btn btn-primary" target="_blank">View Project</a>
+                            <a href="https://github.com/Shravanigi/Resume_Builder" class="btn btn-primary" target="_blank">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                         <div class="card-body text-center d-flex flex-column justify-content-between">
                             <h5 class="card-title">Grocery Mart</h5>
                             <p class="card-text">I have developed a full-stack online grocery platform. The responsive frontend, built with HTML, CSS, Bootstrap, and JavaScript, provides a seamless shopping experience for customers. On the backend, Java handles all server-side logic and order processing. The platform manages all user, product, and order information through a MySQL database.</p>
-                            <a href="#" class="btn btn-primary" target="_blank">View Project</a>
+                            <a href="https://github.com/shruti-21-patil/GroceryMart_project" class="btn btn-primary" target="_blank">View Project</a>
                         </div>
                     </div>
                 </div>
