footer links updated

--- a/education.html
+++ b/education.html
@@ -76,11 +76,10 @@
     <footer class="mt-auto">
         <div class="container">
             <div class="social-icons mb-3">
-                <a href="www.linkedin.com/in/shravani-kudale-5442a6300" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/shravani-kudale-5442a6300/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/Shravanigi" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="shravanikudale@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
-                <!-- Added phone icon to the footer -->
-                <a href="7499877645"><i class="fas fa-phone"></i></a>
+                <a href="mailto:shravanikudale30@gmail.com"><i class="fas fa-envelope"></i></a>
+               <a href="tel:+917499877645"><i class="fas fa-phone"></i></a>
             </div>
             <p>&copy; 2025 Shravani Kudale. All Rights Reserved.</p>
         </div>
