spelling mistakes correction done

--- a/Index.html
+++ b/Index.html
@@ -51,7 +51,7 @@
         <div class="container">
             <img src="Shravani_Kudale.jpg" alt="Profile Picture" class="profile-img mb-4">
             <h1>Hi, I'm Shravani Kudale</h1>
-            <p>As a recent BBA Computer Application graduate, I am passionate about building full-stack solutions that are not only technically robust but also strategically aligned with business objectives. With a solid foundation in Java, Spring Boot, and modern web technologies, I am eager to apply my problem-solving skills to develop efficient and impactful digital products.</p>
+            <p>As a recent BBA Computer Application graduate, I am passionate about building full-stack solutions that are not only technically robust but also strategically aligned with business objectives. With a solid foundation in Java, Spring Boot, and modern web technologies, I am eager to apply my problem-solving skills to develope efficient and impactful digital products.</p>
             <!-- Updated button to link to the new projects section on this page -->
             <a href="#projects" class="btn btn-light btn-lg mt-4">View My Work</a>
         </div>
