--- a/education.html
+++ b/education.html
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="timeline-item mb-4">
-                        <h5>Bachelor of Business Administration in Computer Applicatoin</h5>
+                        <h5>Bachelor of Business Administration in Computer Application</h5>
                         <p class="text-muted">Mahatama Phule Mahavidyalaya Pimpri Pune-17 | 2022 - 2025</p>
                         <p>Completed coursework in data structures, algorithms, database management, and web development. Graduated with an 8.8/10 CGPA.</p>
                     </div>
